# ds_manual

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  close-session.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements-docs.txt  requirements.txt
.devcontainer/: devcontainer.json
binder/: requirements.txt
cards/: README.md  TEMPLATE_data_card.md  TEMPLATE_model_card.md  case_study_uplift_model_card.md  p1_breast_cancer_data_card.md  p1_breast_cancer_model_card.md  p2_forecasting_model_card.md  p3_causal_model_card.md  p4_clustering_model_card.md  p5_survival_model_card.md  p6_fairness_model_card.md  p7_anomaly_model_card.md  p8_recommender_model_card.md  p9_nlp_model_card.md
case_study_churn_uplift/: business_case.md  metrics.md  notebook.ipynb  run.py
docs/: 00-map-of-data-science.md  01-lifecycle-and-reproducibility.md  02-statistics-that-matter.md  03-data-and-feature-engineering.md  04-evaluation-and-validation.md  05-supervised-learning.md  06-unsupervised-learning.md  07-time-series-forecasting.md  08-recommendation-systems.md  09-causal-inference-and-experimentation.md  10-nlp-and-llms.md  11-computer-vision.md  12-optimization.md  13-anomaly-detection.md  14-mlops-and-productionization.md  15-communication-and-visualization.md  16-survival-analysis.md  17-experimentation-advanced.md  18-sql-and-data-engineering.md  19-responsible-ai-and-fairness.md  20-bayesian-and-probabilistic.md  21-graph-and-network-analysis.md  22-geospatial.md  23-reinforcement-learning.md  24-vector-databases-rag.md  25-automl-hyperparameter-tuning.md  31-fintech.md  (+15 more)
(+67 files in other folders)
