[project]
name = "dsmanual"
version = "0.1.0"
description = "Reusable, tested utilities for The Applied Data Science Manual"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E402"]  # projects set matplotlib backend before imports intentionally
